# weblodge

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: app_tiers_tests.yml  deployment_tests.yml  deployments.yml  end-to-end.yml  pylint.yml  tests.yml
docs/source/: commands.rst  conf.py  config_file.rst  index.rst  infrastructure.rst  lifecycle.rst  tutorial.rst
src/: __main__.py
tests/: test_config_with_state.py  test_parameters_with_state.py
tests/_azure/: cli.py  test_appservice_plan.py  test_entra.py  test_keyvault.py  test_log_level.py  test_resource.py  test_resource_group.py  test_service.py  test_sku.py  test_subscription.py  test_web_app.py
tests/cli/: test_args.py
tests/config/: test_config.py
tests/deployment/: main.py
tests/end-to-end/: app-tiers.py  deploy.py  main.py  redeploy.py
tests/parameters/: test_parameters.py
tests/state/: test_state.py
tests/web_app/: test_all.py  test_deploy.py  test_github.py  test_web_app.py
u_deploy/: __main__.py
u_deploy/_azure/: __init__.py  appservice.py  resource.py  resource_group.py  subscription.py  web_app.py
u_deploy/config/: __init__.py  config.py
u_deploy/deploy/: web_app.py
u_deploy/web_app/: build.py  deploy.py  web_app.py
weblodge/: __main__.py
weblodge/_azure/: __init__.py  appservice.py  cli.py  entra.py  exceptions.py  interfaces.py  keyvault.py  log_level.py  resource.py  resource_group.py  service.py  sku.py  subscription.py  web_app.py
weblodge/cli/: __init__.py  args.py  main.py
weblodge/config/: __init__.py  config.py  item.py
weblodge/parameters/: __init__.py  parameters.py
weblodge/state/: __init__.py  state.py
weblodge/web_app/: __init__.py  _all.py  build.py  delete.py  deploy.py  deployment.py  exceptions.py  github.py  logs.py  shared.py  tier.py  tiers.py  utils.py  web_app.py
(+42 files in other folders)
