[tool.poetry]
name = "weblodge"
version = "0.1.1"
description = ""
authors = ["Vuillemot Florian <vuillemot.florian@outlook.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
weblodge = "weblodge.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<=3.11"
azure-cli = "2.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
