[tool.poetry]
name = "weblodge"
version = "0.1.3"
description = ""
authors = ["Vuillemot Florian <vuillemot.florian@outlook.fr>"]

repository = "https://github.com/florian-vuillemot/weblodge"
homepage = "https://github.com/florian-vuillemot/weblodge"

readme = ["README.md", "LICENSE"]
keywords = ["deployment", "azure"]

[tool.poetry.scripts]
weblodge = "weblodge.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
azure-cli = "2.49"
urllib3 = "^2.0.3"

[tool.poetry.group.linter.dependencies]
pylint = ">=2.17,<=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
