[tool.poetry]
name = "weblodge"
version = "0.2.0"
description = "A simple command line aiming to provide anyone with deployment and cloud management capabilities."
authors = ["Vuillemot Florian <vuillemot.florian@outlook.fr>"]

repository = "https://github.com/florian-vuillemot/weblodge"
homepage = "https://github.com/florian-vuillemot/weblodge"

readme = ["README.md", "LICENSE"]
keywords = ["deployment", "azure"]

[tool.poetry.scripts]
weblodge = "weblodge.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
azure-cli = ">=2.40.0"

[tool.poetry.group.tests.dependencies]
urllib3 = "^2.0.3"

[tool.poetry.group.linter.dependencies]
pylint = ">=2.17,<=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
